--- a/android/app/src/main/res/xml/widget_action_btn.xml
+++ b/android/app/src/main/res/xml/widget_action_btn.xml
@@ -2,10 +2,10 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/action_widget_description"
     android:initialLayout="@layout/widget_action_layout"
-    android:minHeight="100dp"
-    android:minWidth="50dp"
+    android:minHeight="50dp"
+    android:minWidth="100dp"
     android:previewImage="@layout/widget_action_layout"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="horizontal"
     android:updatePeriodMillis="1800000"
     android:widgetCategory="keyguard|home_screen">
 
