--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="green_color">#66BB6A</color>
     <color name="yellow_color">#D4E157</color>
     <color name="red_color">#EF5350</color>
+    <color name="my_blue">#8cc4ff</color>
 </resources>
