--- a/android/app/src/main/res/layout/widget_action_layout.xml
+++ b/android/app/src/main/res/layout/widget_action_layout.xml
@@ -68,8 +68,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/tx_widget_name"
-        android:textSize="12sp"
-        android:text="@string/no_name"
+        android:textSize="14sp"
+        android:text="@string/name"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="2"
