--- a/android/app/src/main/res/layout/widget_action_layout.xml
+++ b/android/app/src/main/res/layout/widget_action_layout.xml
@@ -2,15 +2,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="50dp"
+    android:layout_width="65dp"
     android:layout_height="65dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:orientation="horizontal"
-        android:background="@drawable/bg_plain"
-        >
+        android:background="@drawable/bg_plain">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -68,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/tx_widget_name"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:text="@string/name"
         android:shadowDx="1"
         android:shadowDy="1"
